<resources>
    <string name="app_name">HoraireUdeM</string>

    <string name="title_activity_departments">Departments</string>
    <string name="title_activity_courses">Courses</string>
    <string name="title_activity_details_course">Course details</string>
    <string name="title_activity_full_details_course">Full details for course</string>
    <string name="title_activity_schedule">Schedule</string>

    <string name="department_titre">Department title</string>

    <string name="course_title">Course name</string>
    <string name="course_description">Course description</string>
    <string name="course_section">Section</string>
    <string name="course_type">Type: </string>
    <string name="course_cancellation">Cancellation: </string>
    <string name="course_drop">Course drop: </string>
    <string name="course_drop_limit">Limit: </string>

    <string name="course_button_next">+Follow</string>
    <string name="course_button_back">Back</string>
    <string name="course_button_add">Add the course</string>
    <string name="course_button_edit">Edit</string>

    <string name="schedule_theory">Theory</string>
    <string name="schedule_demo">Demo</string>
    <string name="schedule_midterm">Midterm</string>
    <string name="schedule_final">Final exam</string>

    <string name="action_calendar">Calendar</string>
    <string name="action_search" >Search</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_timetable">Timetable</string>
    <string name="action_add_new_course">Add a new course</string>
    <string name="action_synchronize">Synchronize with Google</string>
    <string name="action_share">Share to</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log out</string>
    <string name="action_log_in">Log in</string>

    <string name="season_winter">Winter</string>
    <string name="season_summer">Summer</string>
    <string name="season_autumn">Autumn</string>

    <string name="search_department">Search department</string>
    <string name="search_course">Search course</string>

    <string name="sigle_cours">Sigle+cours</string>
    <string name="teacher">Teacher:</string>
    <string name="group">Group:</string>
    <string name="class_started_at">Class start:</string>
    <string name="class_ended_at">Class end:</string>

    <string name="course_activity">Course</string>
    <string name="hello_world">Hello world!</string>

    <string name="added_course_part1">We have a:</string>
    <string name="added_course_part2"> Group: </string>
    <string name="match_found">We have a match  </string>

    <!-- Sliding TabStrip -->
    <string name="tab_stream">Stream</string>
    <string name="tab_messages">Messages</string>
    <string name="tab_notifications">Notifications</string>
    <string name="tab_photos">Photos</string>

    <!-- Errors and toast messages -->
    <string name="FILE_IS_EMPTY">No data has been loaded yet...</string>
    <string name="DATA_IS_NOT_AVAILABLE">The data is not available...</string>

    <string name="INTERNET_CONNECTION_ERROR">Please connect to working Internet connection</string>
    <string name="DB_ROW_EXIST">The course is already registered</string>
    <string name="DB_ROW_ADDED">The course is successfully registered</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="progress_dialog_title">Please wait.</string>
    <string name="progress_dialog_message">Processing ...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Typeface names -->
    <string name="typeface_roboto_regular">Roboto-Regular</string>
    <string name="typeface_roboto_medium">Roboto-Medium</string>
    <string name="title_activity_action_drawer">Navigation Drawer</string>

    <!-- Seasons -->
    <string name="H">Winter</string>
    <string name="E">Summer</string>
    <string name="A">Autumn</string>
    <string name="S">Spring</string>

    <!-- Dialog List Items -->
    <string-array name="dialog_items">
        <item>Delete course</item>
        <item>Show schedule</item>
        <item>Update course</item>
    </string-array>

</resources>
