<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mobile.umontreal.schedule.MainActivity">

    <!--&lt;!&ndash; Search &ndash;&gt;-->
    <!--<item android:id="@+id/action_search"-->
    <!--android:icon="@drawable/abc_ic_search_api_mtrl_alpha"-->
    <!--android:title="@string/action_search"-->
    <!--app:showAsAction="ifRoom|collapseActionView"-->
    <!--app:actionViewClass="android.support.v7.widget.SearchView" />-->

    <!-- Calendar -->
    <item android:id="@+id/action_calendar"
        android:icon="@mipmap/ic_go_to_today"
        android:title="@string/action_calendar"
        app:showAsAction="always" />

    <!-- Schedule -->
    <item android:id="@+id/action_schedule"
        android:title="@string/action_schedule"
        app:showAsAction="never"/>

    <!-- Timetable -->
    <item android:id="@+id/action_timetable"
        android:title="@string/action_timetable"
        app:showAsAction="never"/>

    <!-- Add a new course -->
    <item android:id="@+id/action_add_new_course"
        android:title="@string/action_add_new_course"
        app:showAsAction="never" />

    <!-- Synchronize with google -->
    <item android:id="@+id/action_synchronize"
        android:title="@string/action_synchronize"
        app:showAsAction="never" />

    <!-- Sharing -->
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never"/>

    <!-- Log out -->
    <item android:id="@+id/action_logout"
        android:title="@string/action_log_out"
        app:showAsAction="never" />

    <!-- Log in -->
    <item android:id="@+id/action_login"
        android:title="@string/action_log_in"
        app:showAsAction="never" />

    <!-- Settings -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />



</menu>