<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="0dip"
    android:paddingRight="0dip"
    android:paddingTop="0dip"
    android:paddingBottom="0dip"
    tools:context="com.mobile.umontreal.schedule.DetailsCourseActivity">

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:background="@color/table_background_color">

    <!-- Row 1 with single column -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="left"
        android:background="@color/table_title_background_color">
        <TextView
            android:id="@+id/course_title"
            android:text="@string/course_titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_span="2"
            android:textColor="@color/table_title_color"
            android:padding="18dip"/>
    </TableRow>

    <!-- Row 2 with single column -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/course_description"
            android:text="@string/course_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/table_text_color"
            android:lineSpacingMultiplier="1.5"
            android:layout_span="2"
            android:padding="18dip"/>
    </TableRow>

    <!-- Row 3 with 2 columns -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:padding="12dip"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/course_cancellation"
            android:text="@string/course_cancellation"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/table_text_bold_color"
            android:gravity="right"/>

        <TextView
            android:id="@+id/course_cancellation_value"
            android:text=""
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/table_text_bold_color"
            android:gravity="center"/>
    </TableRow>

    <!-- Row 4 with 2 columns -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:padding="12dip"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/course_drop"
            android:text="@string/course_drop"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/table_text_bold_color"
            android:gravity="right"/>

        <TextView
            android:id="@+id/course_drop_value"
            android:text=""
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/table_text_bold_color"
            android:gravity="center"/>
    </TableRow>

    <!-- Row 5 with 2 columns -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:padding="12dip"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/course_drop_limit"
            android:text="@string/course_drop_limit"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/table_text_bold_color"
            android:gravity="right"/>

        <TextView
            android:id="@+id/course_drop_limit_value"
            android:text=""
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/table_text_bold_color"
            android:gravity="center"/>
    </TableRow>

    <!-- Row 6 with single column -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_span="2"
        android:gravity="right">

        <Button
            android:id="@+id/course_button_next"
            android:text="@string/course_button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/button_text_color"
            android:layout_margin="18dip"
            android:background="@color/button_background_color"/>
    </TableRow>

</TableLayout>

</RelativeLayout>