<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/table_row_padding_left"
    android:paddingRight="@dimen/table_row_padding_right"
    android:paddingTop="@dimen/table_row_padding_top"
    android:orientation="vertical"
    tools:context="com.mobile.umontreal.schedule.FullDetailsCourseActivity">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:background="@color/table_background_color">

        <!-- Row 1 with single column :: Title -->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="left"
            android:background="@color/table_title_background_color">
            <TextView
                android:id="@+id/course_title"
                android:paddingLeft="@dimen/padding_table_row"
                android:paddingTop="@dimen/padding_table_row"
                android:textStyle="bold"
                android:text="@string/course_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title_size"
                android:textColor="@color/table_title_color"/>

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="left"
            android:background="@color/table_title_background_color">

            <TextView
                android:id="@+id/course_section"
                android:paddingLeft="@dimen/padding_table_row"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/course_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_description_size"
                android:textStyle="bold"
                android:textColor="@color/theme_accent_1"/>

        </TableRow>


        <TableRow>

            <com.astuetz.PagerSlidingTabStrip
                android:id="@+id/tabs"
                android:textSize="@dimen/text_tab_size"
                android:background="@color/button_background_color"
                android:textColor="@color/white"
                app:pstsShouldExpand="true"
                app:pstsTextAllCaps="true"
                android:layout_width="match_parent"
                android:layout_span="2"
                android:layout_height="@dimen/tab_height">
            </com.astuetz.PagerSlidingTabStrip>

        </TableRow>

        <TableRow android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/view_table_row">

            <android.support.v4.view.ViewPager
                android:id="@+id/schedule_viewer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/course_button_add"
                android:layout_span="2"
                android:text="@string/course_button_add"
                android:layout_height="@dimen/margin_bottom_view_pager"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_button_size"
                android:textColor="@color/button_text_color"
                android:gravity="center"
                android:background="@color/button_background_color"
                android:onClick="buttonClick" />

            <!--<FrameLayout-->
                <!--android:id="@+id/sample_content_fragment"-->
                <!--android:layout_span="2"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="0px" />-->

        </TableRow>

    </TableLayout>

</RelativeLayout>
